--- a/style.css
+++ b/style.css
@@ -2,8 +2,58 @@
     border-width: 100%;
     border: solid 1px green;
     display: flex;
-    gap: 90px;
+    gap: 100px;
     border-color: green;
     background-color: green;
 
+}
+
+.topnav{
+    display: flex;
+     justify-content: center;
+    align-content: center;
+}
+
+.navbar{
+    display: flex;
+    gap: 60px;
+    align-content: center;
+
+}
+#headers{
+    align-content: start;
+}
+.icon{
+    gap: 100px;
+
+}
+button{
+    background-color: green;
+    color: antiquewhite;
+    padding: 10px 11px;
+    border-radius: 6px;
+}
+.summ{
+    display: flex;
+}
+.flex{
+    display: flex;
+    flex-wrap: wrap;
+}
+.second{
+    display: flex;
+}
+.input{
+    width: 600px;
+}
+.foot{
+    display: flex;
+    gap: 80px;
+}
+.imgz{
+    display: flex;
+    gap: 130px;
+}
+.pic{
+    width: 500px;
 }
